<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
<!--    <androidx.drawerlayout.widget.DrawerLayout-->
<!--        android:id="@+id/drawer_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

    <!--        <com.google.android.material.navigation.NavigationView-->
<!--            android:id="@+id/nav_view"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="start"-->
<!--            app:menu="@menu/nav_menu" />-->

<!--        &lt;!&ndash; 在这里引入 Toolbar &ndash;&gt;-->
<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            android:background="?attr/colorPrimary"-->
<!--            app:title="@string/title" />-->

<!--    </androidx.drawerlayout.widget.DrawerLayout>-->

<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start">-->
<!--    </com.google.android.material.navigation.NavigationView>-->

    <LinearLayout
        android:id="@+id/chat_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--        <ImageButton-->
            <!--            android:id="@+id/nav_drawer_btn"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:src="@drawable/ic_nav_drawer"/>-->

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/chat_box_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#F5F5F5">

            <LinearLayout
                android:id="@+id/chat_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F5F5F5"
                android:orientation="vertical" />

        </ScrollView>

        <LinearLayout
            android:id="@+id/input_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <EditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/type_your_message"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:imeOptions="actionNone"/>

            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1E90FF "
                android:text="@string/send" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>